--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="col-lg-4 col-md-12 col-sm-12">
           <div class="card potti">
             <div class="card-header cd-title">
-              <h3>Haki</h3>
+              <h3>Haki user</h3>
             </div>
             <div class="card-body cd-body">
               <h2 class="p-color ta-box">₹99 / mo</h2>
@@ -189,7 +189,7 @@
         <div class="col-lg-4 col-md-12 col-sm-12">
           <div class="card potti">
             <div class="card-header cd-title">
-              <h3>Devil Fruite</h3>
+              <h3>Devil Fruite user</h3>
             </div>
             <div class="card-body cd-body">
               <h2 class="p-color ta-box">₹999 / yr</h2>
